# radae

./: 250622_ft  250625_ml_sync  250725_ft  250725_ml_sync  250725a_ml_sync  251002_mpp_16k_ft  BBFM.md  CMakeLists.txt  FreeDV-032 Radio Autoencoder Waveform Design.ods  LICENSE  README.md  adapp.m  adasmooth.m  analog.tex  analog_bbfm.sh  analog_plots.m  asr_test.sh  asr_test_awgn.sh  asr_test_top.sh  asr_wer.py  autocorr.py  autocorr_simple.py  bbfm_analog.py  bbfm_analog.sh  bbfm_bpf.m  bbfm_inference.py  bbfm_inference.sh  bbfm_rx.py  bbfm_rx.sh  bbfm_rx_stream.py  build_libopus.sh  chirp.py  compare_models.sh  compare_models_bbfm.sh  compare_models_inf.sh  diff_f32.py  doppler_spread.m  dt_test.sh  eoo_ber.py  est_CNo.py  (+61 more)
.github/workflows/: run_ctest.yml
cmake/: BuildOpus.cmake  FindOrBuildOpus.cmake  test_opus.c
doc/: 260203_inf_loss_PNR3k_models-inc.eps  260203_inf_loss_PNR3k_models.tex  260203_inf_loss_SNR3k_models-inc.eps  260203_inf_loss_SNR3k_models.tex  260206_inf_loss_SNR3k_models-inc.eps  260206_inf_loss_SNR3k_models.tex  FreeDV-032 Radio Autoencoder Waveform Design.ods  est_snr-inc.eps  est_snr.tex  est_snr2a-inc.eps  est_snr2a.tex  est_snr2b-inc.eps  est_snr2b.tex  fm_cnr_snr-inc.eps  fm_cnr_snr.tex  loss_EqNo_models-inc.eps  loss_EqNo_models.tex  ml_amdet.eps  model19_aux3_z_psd-inc.eps  model19_aux3_z_psd.tex  model19_aux3_z_scatter-inc.eps  model19_aux3_z_scatter.tex  model19_aux3_z_scatter_3d-inc.eps  model19_aux3_z_scatter_3d.tex  ofdm_sync-inc.eps  ofdm_sync.tex  ofdm_sync_mp-inc.eps  radae.tex  radae_refs.bib  rade_intro_waveform.tex  rade_presentation.tex  rayleigh_sum-inc.eps  rayleigh_sum.tex  rayleigh_sum_pdf.tex  stored_file_test.md  v2_test_report.tex
embed/: README.md  embed1.c  embed_dec.c  embed_dec.py  mult.py  radae_rx.py  radae_tx.c  radae_tx.py
public_html/: form.html  test_python.cgi  tx_form.html  tx_process.cgi
radae/: __init__.py  bbfm.py  dataset.py  dsp.py  radae.py  radae_base.py
src/: CMakeLists.txt  lpcnet_demo.c  opus-export.diff  opus-nnet.h.diff  radae_rx.c  radae_tx.c  rade_api.c  rade_api.h  rade_constants.h  rade_core.h  rade_dec.c  rade_dec.h  rade_dec_data.h  rade_enc.c  rade_enc.h  rade_enc_data.h  test_rade_dec.c  test_rade_enc.c  write_rade_weights.c
test/: chirp_mpp.sh  inference_ber_awgn.sh  inference_ber_mpp.sh  make_g.sh  make_g_mpp.sh  ota_test_cal.sh  v2_acq.sh  v2_spot.sh  v2_timing.sh
weight-exchange/wexchange/c_export/: c_writer.py  common.py
weight-exchange/wexchange/torch/: torch.py
